--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,8 @@
     <artifactId>OJ_Solutions</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <dependencies>
+
+    </dependencies>
+
 </project>
